# entity-store

./: .gitignore  Cargo.toml  README.md  publish.sh
code-gen/: Cargo.toml
code-gen/src/: aggregate_type.rs  code_gen.rs  input.rs  lib.rs  output.rs  renderer.rs  result.rs  spec.rs  storage_type.rs
code-gen/src/templates/: component.template.rs  component_type_set.template.rs  constants.template.rs  entity_change.template.rs  entity_component_table.template.rs  entity_id_allocator.template.rs  entity_store.template.rs  entity_store_raw.template.rs  flat_collections.template.rs  id.template.rs  iterators.template.rs  mod.template.rs  spatial_hash.template.rs  vec_collections.template.rs
demo/: Cargo.toml  spec.toml
demo/src/: main.rs
helper/: Cargo.toml
helper/src/: lib.rs
src/: aggregate_type.rs  code_gen.rs  input.rs  lib.rs  output.rs  renderer.rs  result.rs  spec.rs  storage_type.rs
src/templates/: component.template.rs  component_type_set.template.rs  entity_change.template.rs  entity_component_table.template.rs  entity_store.template.rs  entity_vec.template.rs  mod.template.rs  spatial_hash.template.rs
tests/: Cargo.toml  spec.toml
tests/empty/: Cargo.toml  spec.toml
tests/general/: Cargo.toml
tests/general/src/: lib.rs
tests/no-spatial-hash/: Cargo.toml  spec.toml
tests/no-spatial-hash/src/: lib.rs
tests/src/: lib.rs
