[package]
name = "entity_store_code_gen"
description = "Code generator for game data store"
version = "0.9.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/entity_store_code_gen"
repository = "https://github.com/stevebob/entity-store.git"
homepage = "https://github.com/stevebob/entity-store.git"
readme = "README.md"

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
itertools = "0.7"
tera = "0.10"
