[package]
name = "demo"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
entity_store_helper = { path = "../helper" }
grid_2d = "0.7"
enum_primitive = "0.1"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
entity_store_code_gen = { path = "../code-gen" }
